# Interview

./: .gitignore  .htaccess  .project  App.java  Converter.java  Database.py  FrontEnd.php  Headstorm Data Science Challenge.ipynb  LICENSE  Main.java  Numbers.java  Pair.java  README.md  README.txt  README2.md  RandomNumberController.java  RandomRestApplication.java  ReadMe.txt  RestController.php  Solution.java  Solve.cpp  _app.js  _document.js  about.html  acompany.php  api.php  app.js  backChallenge.java  backEnd_challenge.py  backend.py  backend.rb  backend_challenge.txt  bobs_shop.php  bookmarkit.html  challenge.html  companystyle.css  contact.html  customers.json  data.json  dataApp.js  (+39 more)
Back End Challenge/: ._Json for api.txt  ._README.md  ._headstormDB.sql  HomeController.cs  Json for api.txt  README.md  headstormDB.sql  pom.xml
BackEndChallenge/: README.md
Back_End/: package-lock.json  package.json  server.js
Backend/: Challenge2.js
DataMigration/: DataMigration.sln
Database/: .gitignore  apiRoutes.js  package-lock.json  package.json  schema.sql  server.js
Database Challenge/: Database Design Challenge 1.docx  JsonToSql.java  Program.cs
DatabaseChallenge/: README.md  dbchallenge.py  oldDb.json
Front End Challenge/: README.md  (+3 more)
submission/backend/server/: CMakeLists.txt  main.cpp
submission/backend/server/include/: Controller.hpp  InterruptHandler.hpp  Server.hpp
submission/database/: CMakeLists.txt  main.cpp
submission/database/include/: JsonDB.hpp  SQLiteDB.hpp
submission/database/new-system/: db.db
submission/database/old-system/: db.json
(+983 files in other folders)
